sync changes up to R3367 from /branches/project/Android_Console_2_0_0_Betas branch